--- a/PRG2/pom.xml
+++ b/PRG2/pom.xml
@@ -90,6 +90,12 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.nexmo</groupId>
+			<artifactId>client</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 	</dependencies>
   
 </project>
